--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -2,7 +2,8 @@
     .homeBanner {
         background-image: url(../images/home/banner.png);
         background-repeat: no-repeat;
-        background-size: contain;
+        background-size: cover;
+        padding-bottom: 195px;
         &-search {
             width: 70%;
             &--partner {
@@ -42,6 +43,7 @@
             margin-top: 40px;
         }
         &-shipping-info {
+            position: absolute;
             &-item {
                 box-shadow: 0px 4px 20px rgba(119, 132, 157, 0.2);
                 border-radius: 4px;
@@ -53,12 +55,356 @@
                     height: 5px;
                     background: #7a77ee;
                 }
+                .line-pink {
+                    width: 64px;
+                    height: 5px;
+                    background: #f55c7d;
+                }
+                .line-orange {
+                    width: 64px;
+                    height: 5px;
+                    background: #ff9635;
+                }
             }
         }
     }
     .homeInstall {
         background-image: url(../images/home/background1.png);
         background-repeat: no-repeat;
-        background-size: stretch;
+        background-size: cover;
+        .action-install {
+            .install-web {
+                background: #000;
+                border-radius: 6px;
+                padding: 10px 15px;
+                min-width: 226px;
+            }
+        }
+        .action-download {
+            .download-app {
+                background: #000;
+                border-radius: 40px;
+                padding: 10px 15px;
+                min-width: 226px;
+            }
+        }
+    }
+    .intro {
+        &-item {
+            width: 280px;
+            height: 280px;
+            box-shadow: 0px 0px 36px rgba(156, 171, 185, 0.3);
+            border-radius: 100rem;
+            background: #ffffff;
+            &:nth-child(2) {
+                background-color: #5287ed;
+                .border-custom {
+                    border: 1px solid #ffffff;
+                }
+            }
+            .border-custom {
+                width: 260px;
+                height: 260px;
+                border: 1px solid rgba(156, 171, 185, 0.3);
+                box-sizing: border-box;
+                border-radius: 100rem;
+            }
+        }
+        .line-background {
+            top: 38%;
+            z-index: -1;
+        }
+    }
+    .processOrders {
+        background: #f4f6f8;
+        &-top {
+            background: #fff;
+            border-radius: 20px;
+        }
+        &-bottom {
+            .position-arrow-down {
+                top: -25%;
+                left: 50%;
+                width: 228px;
+            }
+            .position-arrow-up {
+                bottom: -25%;
+                left: 50%;
+                width: 228px;
+            }
+            &-item {
+                background: #fff;
+                border-radius: 20px;
+                width: 198px;
+                height: 236px;
+                overflow: hidden;
+                &-number {
+                    width: 80px;
+                    height: 80px;
+                    background: #5287ed;
+                    border-radius: 100rem;
+                    top: -12%;
+                    left: -12%;
+                    .text-number {
+                        right: 30%;
+                        bottom: 15%;
+                    }
+                }
+                &-content {}
+            }
+        }
+    }
+    .serviceCommitment {
+        &-top {}
+        &-bottom {}
+        &-item {
+            width: 350px;
+            &-sky-blue {
+                top: 29%;
+                left: 6%;
+                border: 1px solid #3cb7c8;
+                .title {
+                    background-color: #3cb7c8;
+                    padding: 9px 0;
+                }
+                .content {
+                    background: #fff;
+                    padding: 13px 0;
+                }
+            }
+            &-green {
+                border: 1px solid #62c259;
+                top: 20%;
+                left: 40%;
+                .title {
+                    background-color: #62c259;
+                    padding: 9px 0;
+                }
+                .content {
+                    background: #fff;
+                    padding: 13px 0;
+                }
+            }
+            &-orange {
+                top: 40%;
+                right: -2%;
+                border: 1px solid #ff9635;
+                .title {
+                    background-color: #ff9635;
+                    padding: 9px 0;
+                }
+                .content {
+                    background: #fff;
+                    padding: 13px 0;
+                }
+            }
+            &-purple {
+                bottom: 8%;
+                left: 10%;
+                border: 1px solid#7A77EE;
+                .title {
+                    background-color: #7a77ee;
+                    padding: 9px 0;
+                }
+                .content {
+                    background: #fff;
+                    padding: 13px 0;
+                }
+            }
+            &-yellow {
+                bottom: 15%;
+                left: 43%;
+                border: 1px solid #f9c500;
+                .title {
+                    background-color: #f9c500;
+                    padding: 9px 0;
+                }
+                .content {
+                    background: #fff;
+                    padding: 13px 0;
+                }
+            }
+            &-pink {
+                bottom: 4%;
+                right: -6%;
+                border: 1px solid #f55c7d;
+                .title {
+                    background-color: #f55c7d;
+                    padding: 9px 0;
+                }
+                .content {
+                    background: #fff;
+                    padding: 13px 0;
+                }
+            }
+        }
+    }
+    .feedbacks {
+        &-top {
+            background: #5287ed;
+            padding: 96px 0 48px;
+            &-item {
+                padding: 66px 36px 18px;
+                width: 255px;
+                background: #fff;
+                border-radius: 16px;
+                .number {
+                    &-blue-sky {
+                        top: -33%;
+                        left: 33%;
+                        width: 100px;
+                        height: 100px;
+                        border-radius: 100rem;
+                        border: 2px dashed #3cb6c8;
+                        background: #fff;
+                        color: #3cb6c8;
+                    }
+                    &-pink {
+                        top: -33%;
+                        left: 33%;
+                        width: 100px;
+                        height: 100px;
+                        border-radius: 100rem;
+                        border: 2px dashed #f55c7d;
+                        background: #fff;
+                        color: #f55c7d;
+                    }
+                    &-purple {
+                        top: -33%;
+                        left: 33%;
+                        width: 100px;
+                        height: 100px;
+                        border-radius: 100rem;
+                        border: 2px dashed #7a77ee;
+                        background: #fff;
+                        color: #7a77ee;
+                    }
+                    &-orange {
+                        top: -33%;
+                        left: 33%;
+                        width: 100px;
+                        height: 100px;
+                        border-radius: 100rem;
+                        border: 2px dashed #ff9635;
+                        background: #fff;
+                        color: #ff9635;
+                    }
+                }
+                .content {}
+            }
+        }
+        &-bottom {
+            &-item {
+                .avt-client {
+                    img {
+                        border-radius: 100rem;
+                    }
+                }
+            }
+        }
+    }
+    .news {
+        background-color: #f4f6f8;
+        &-title {}
+        &-content {
+            &-item {
+                width: 350px;
+                border-radius: 4px;
+                .line-blue {
+                    width: 20%;
+                    height: 5px;
+                    background-color: #5287ed;
+                }
+                .line-gray {
+                    width: 80%;
+                    height: 1px;
+                    background-color: #dedede;
+                }
+            }
+        }
+    }
+    .faqs {
+        background: url(../images/home/bg-faqs.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+        &-item {
+            &-title {
+                .title {
+                    padding: 12px 25px;
+                    background-color: #5287ed;
+                    border-top-left-radius: 4px;
+                    border-bottom-left-radius: 4px;
+                }
+                .button {
+                    background-color: #2c5bb8;
+                    border-top-right-radius: 4px;
+                    border-bottom-right-radius: 4px;
+                    button {
+                        border: 0;
+                        background: transparent;
+                    }
+                }
+            }
+            &-content {
+                background: #e3e6f3;
+                padding: 12px 25px;
+                border-radius: 4px;
+            }
+        }
+    }
+    .partners {
+        background: url(../images/home/bg-partner.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+        &-header {}
+        &-content {
+            &-item {
+                background-color: #fff;
+                padding: 23px;
+                border-radius: 16px;
+                box-shadow: 0px 4px 20px rgba(134, 152, 196, 0.37);
+            }
+        }
+    }
+    .register {
+        background: #f4f6f8;
+        background-image: url(../images/home/bg-register.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+        &-header {}
+        &-content {
+            .form-register {
+                background-color: #5287ed;
+                &-left {
+                    background: #2c5bb8;
+                    border-bottom-right-radius: 200px;
+                    .line-dashed {
+                        border: 0.5px dashed rgba(255, 255, 255, 0.33);
+                    }
+                }
+                &-right {
+                    input {
+                        padding: 15px;
+                        width: 100%;
+                        border-radius: 8px;
+                        border: 1px solid #ffffff;
+                        &::placeholder {
+                            color: #839cb0;
+                        }
+                    }
+                    select {
+                        padding: 15px;
+                        width: 100%;
+                        border-radius: 8px;
+                        border: 1px solid #ffffff;
+                    }
+                    .btn-register {
+                        background: #ff9635;
+                        border-radius: 50px;
+                        padding: 16px 42px;
+                    }
+                }
+            }
+        }
     }
 }
