--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -22,6 +22,7 @@ https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap
 -----------------------------------------------------------------------------------*/
 
+
 /*-- Google Font --*/
 
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
@@ -31,6 +32,7 @@ https://fonts.gstatic.com">
 @import "offcanvas";
 @import "default";
 @import "header";
+@import "footer";
 // @import "index";
 @import "home";
 @import "appmobile";
