--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1389,7 +1389,7 @@ blockquote {
 .offcanvas-minicart_wrapper .offcanvas-body,
 .mobile-filter_wrapper .offcanvas-body,
 .offcanvas-search_wrapper .offcanvas-body {
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(225, 225, 225, 0.8);
   position: fixed;
   top: 0;
   left: -105vw;
@@ -1426,7 +1426,7 @@ blockquote {
     .offcanvas-minicart_wrapper .offcanvas-body .inner-body .offcanvas-top,
     .mobile-filter_wrapper .offcanvas-body .inner-body .offcanvas-top,
     .offcanvas-search_wrapper .offcanvas-body .inner-body .offcanvas-top {
-      border-bottom: 1px solid #fff;
+      border-bottom: 1px solid #2c405a;
       display: flex;
       justify-content: flex-end;
       padding: 0 25px 43px;
@@ -1437,12 +1437,12 @@ blockquote {
       .mobile-filter_wrapper .offcanvas-body .inner-body .offcanvas-top .button-close,
       .offcanvas-search_wrapper .offcanvas-body .inner-body .offcanvas-top .button-close {
         font-size: 24px;
-        color: #ffffff; }
+        color: #2c405a; }
     .mobile-menu_wrapper .offcanvas-body .inner-body .offcanvas-menu_area .offcanvas-navigation .mobile-menu > li,
     .offcanvas-minicart_wrapper .offcanvas-body .inner-body .offcanvas-menu_area .offcanvas-navigation .mobile-menu > li,
     .mobile-filter_wrapper .offcanvas-body .inner-body .offcanvas-menu_area .offcanvas-navigation .mobile-menu > li,
     .offcanvas-search_wrapper .offcanvas-body .inner-body .offcanvas-menu_area .offcanvas-navigation .mobile-menu > li {
-      border-bottom: 1px solid #fff;
+      border-bottom: 1px solid #2c405a;
       height: 100%; }
       .mobile-menu_wrapper .offcanvas-body .inner-body .offcanvas-menu_area .offcanvas-navigation .mobile-menu > li > a span,
       .offcanvas-minicart_wrapper .offcanvas-body .inner-body .offcanvas-menu_area .offcanvas-navigation .mobile-menu > li > a span,
@@ -1477,7 +1477,7 @@ blockquote {
       .offcanvas-minicart_wrapper .offcanvas-body .inner-body .offcanvas-menu_area .offcanvas-navigation .mobile-menu li a,
       .mobile-filter_wrapper .offcanvas-body .inner-body .offcanvas-menu_area .offcanvas-navigation .mobile-menu li a,
       .offcanvas-search_wrapper .offcanvas-body .inner-body .offcanvas-menu_area .offcanvas-navigation .mobile-menu li a {
-        color: #ffffff;
+        color: #2c405a;
         font-size: 16px;
         text-transform: uppercase;
         display: block;
@@ -1502,7 +1502,7 @@ blockquote {
         .offcanvas-minicart_wrapper .offcanvas-body .inner-body .offcanvas-menu_area .offcanvas-navigation .mobile-menu li .sub-menu li,
         .mobile-filter_wrapper .offcanvas-body .inner-body .offcanvas-menu_area .offcanvas-navigation .mobile-menu li .sub-menu li,
         .offcanvas-search_wrapper .offcanvas-body .inner-body .offcanvas-menu_area .offcanvas-navigation .mobile-menu li .sub-menu li {
-          border-top: 1px solid #fff; }
+          border-top: 1px solid #2c405a; }
           .mobile-menu_wrapper .offcanvas-body .inner-body .offcanvas-menu_area .offcanvas-navigation .mobile-menu li .sub-menu li:last-child,
           .offcanvas-minicart_wrapper .offcanvas-body .inner-body .offcanvas-menu_area .offcanvas-navigation .mobile-menu li .sub-menu li:last-child,
           .mobile-filter_wrapper .offcanvas-body .inner-body .offcanvas-menu_area .offcanvas-navigation .mobile-menu li .sub-menu li:last-child,
@@ -1515,7 +1515,7 @@ blockquote {
             padding-left: 63px;
             text-transform: none;
             font-size: 16px;
-            color: #ffffff; }
+            color: #2c405a; }
             .mobile-menu_wrapper .offcanvas-body .inner-body .offcanvas-menu_area .offcanvas-navigation .mobile-menu li .sub-menu li a span,
             .offcanvas-minicart_wrapper .offcanvas-body .inner-body .offcanvas-menu_area .offcanvas-navigation .mobile-menu li .sub-menu li a span,
             .mobile-filter_wrapper .offcanvas-body .inner-body .offcanvas-menu_area .offcanvas-navigation .mobile-menu li .sub-menu li a span,
@@ -1533,7 +1533,7 @@ blockquote {
           .mobile-filter_wrapper .offcanvas-body .inner-body .offcanvas-menu_area .offcanvas-navigation .mobile-menu li .sub-menu li.menu-open > a,
           .offcanvas-search_wrapper .offcanvas-body .inner-body .offcanvas-menu_area .offcanvas-navigation .mobile-menu li .sub-menu li.menu-open > a {
             padding-bottom: 13px;
-            color: #ffffff; }
+            color: #2c405a; }
             .mobile-menu_wrapper .offcanvas-body .inner-body .offcanvas-menu_area .offcanvas-navigation .mobile-menu li .sub-menu li.menu-open > a > span > i:before,
             .offcanvas-minicart_wrapper .offcanvas-body .inner-body .offcanvas-menu_area .offcanvas-navigation .mobile-menu li .sub-menu li.menu-open > a > span > i:before,
             .mobile-filter_wrapper .offcanvas-body .inner-body .offcanvas-menu_area .offcanvas-navigation .mobile-menu li .sub-menu li.menu-open > a > span > i:before,
@@ -1544,7 +1544,7 @@ blockquote {
       .mobile-filter_wrapper .offcanvas-body .inner-body .offcanvas-menu_area .offcanvas-navigation .mobile-menu li.menu-open > a,
       .offcanvas-search_wrapper .offcanvas-body .inner-body .offcanvas-menu_area .offcanvas-navigation .mobile-menu li.menu-open > a {
         padding-bottom: 13px;
-        color: #ffffff; }
+        color: #2c405a; }
         .mobile-menu_wrapper .offcanvas-body .inner-body .offcanvas-menu_area .offcanvas-navigation .mobile-menu li.menu-open > a > span > i:before,
         .offcanvas-minicart_wrapper .offcanvas-body .inner-body .offcanvas-menu_area .offcanvas-navigation .mobile-menu li.menu-open > a > span > i:before,
         .mobile-filter_wrapper .offcanvas-body .inner-body .offcanvas-menu_area .offcanvas-navigation .mobile-menu li.menu-open > a > span > i:before,
@@ -1560,7 +1560,7 @@ blockquote {
       .offcanvas-minicart_wrapper .offcanvas-body .inner-body .header-contact a,
       .mobile-filter_wrapper .offcanvas-body .inner-body .header-contact a,
       .offcanvas-search_wrapper .offcanvas-body .inner-body .header-contact a {
-        color: #ffffff; }
+        color: #2c405a; }
 
 .mobile-menu_wrapper.open .offcanvas-body,
 .offcanvas-minicart_wrapper.open .offcanvas-body,
@@ -1635,7 +1635,7 @@ blockquote {
     position: relative;
     overflow: auto; }
     .offcanvas-minicart_wrapper .offcanvas-body .minicart-content .minicart-list li:not(:last-child) {
-      border-bottom: 1px solid #dee2e6;
+      border-bottom: 1px solid #2c405a;
       padding-bottom: 30px;
       margin-bottom: 30px; }
     .offcanvas-minicart_wrapper .offcanvas-body .minicart-content .minicart-list li.minicart-product {
@@ -1720,7 +1720,7 @@ blockquote {
     .modal-search .hm-searchbox input {
       background-color: transparent;
       border: 0;
-      border-bottom: 1px solid #ffffff;
+      border-bottom: 1px solid #2c405a;
       color: #ffffff;
       height: 100px;
       line-height: 100px;
@@ -1829,6 +1829,9 @@ blockquote {
 .mt-46 {
   margin-top: 46px; }
 
+.mt-140 {
+  margin-top: 140px; }
+
 .mb-23 {
   margin-bottom: 23px; }
 
@@ -1907,6 +1910,8 @@ blockquote {
     padding-right: 10px !important; }
   .p35-desktop {
     padding: 35px !important; }
+  .pb-170-desktop {
+    padding-bottom: 170 !important; }
   .w-50-desktop {
     width: 50% !important; }
   .inline-desktop {
@@ -1919,6 +1924,13 @@ blockquote {
     padding-top: 20px !important; }
   .pt-30-desktop {
     padding-top: 30px !important; }
+  .pt-64-desktop {
+    padding-top: 64px !important; }
+  .py-64-desktop {
+    padding-top: 64px !important;
+    padding-bottom: 64px !important; }
+  .font-32-desktop {
+    font-size: 32px !important; }
   .font-30-desktop {
     font-size: 30px !important; }
   .font-17-desktop {
@@ -1939,6 +1951,8 @@ blockquote {
     font-size: 21px !important; }
   .font-40-desktop {
     font-size: 40px !important; }
+  .font-48-desktop {
+    font-size: 48px !important; }
   .font-56-desktop {
     font-size: 56px !important; }
   .font-72-desktop {
@@ -1949,8 +1963,24 @@ blockquote {
     margin-top: 22px !important; }
   .mt-30-desktop {
     margin-top: 30px !important; }
+  .mt-60-desktop {
+    margin-top: 60px !important; }
+  .mt-34-desktop {
+    margin-top: 34px !important; }
+  .mt-316-desktop {
+    margin-top: 316px !important; }
   .mb-20-desktop {
     margin-bottom: 20px !important; } }
+
+@media screen and (min-width: 1200px) {
+  .font-lg-16 {
+    font-size: 16px !important; } }
+
+@media screen and (max-width: 576px) {
+  .font-mobile-12 {
+    font-size: 12px !important; }
+  .font-mobile-10 {
+    font-size: 10px !important; } }
 
 /*----------------------------------------*/
 /*  10. Header
@@ -2420,13 +2450,23 @@ blockquote {
     width: 220px;
     margin-top: 40px; }
   .content .homeBanner-shipping-info {
-    position: absolute; }
+    left: 12%; }
     .content .homeBanner-shipping-info-item {
       box-shadow: 0px 4px 20px rgba(119, 132, 157, 0.2);
       border-radius: 4px;
-      min-width: 350px;
-      min-height: 300px;
+      max-width: 350px;
+      min-height: 190px;
       background: #fff; }
+      .content .homeBanner-shipping-info-item img {
+        width: 40px;
+        height: 40px; }
+        @media (min-width: 992px) {
+          .content .homeBanner-shipping-info-item img {
+            width: 96px;
+            height: 96px; } }
+      @media (min-width: 992px) {
+        .content .homeBanner-shipping-info-item {
+          min-height: 350px; } }
       .content .homeBanner-shipping-info-item .line-purple {
         width: 64px;
         height: 5px;
@@ -2447,13 +2487,23 @@ blockquote {
   .content .homeInstall .action-install .install-web {
     background: #000;
     border-radius: 6px;
-    padding: 10px 15px;
-    min-width: 226px; }
+    padding: 10px 15px; }
+    @media (max-width: 992px) {
+      .content .homeInstall .action-install .install-web {
+        max-width: 216px; } }
+    @media (min-width: 1200px) {
+      .content .homeInstall .action-install .install-web {
+        min-width: 216px !important; } }
   .content .homeInstall .action-download .download-app {
     background: #000;
     border-radius: 40px;
-    padding: 10px 15px;
-    min-width: 226px; }
+    padding: 10px 15px; }
+    @media (max-width: 992px) {
+      .content .homeInstall .action-download .download-app {
+        max-width: 216px; } }
+    @media (min-width: 1200px) {
+      .content .homeInstall .action-download .download-app {
+        min-width: 216px !important; } }
 
 .content .intro-item {
   width: 280px;
@@ -2461,16 +2511,16 @@ blockquote {
   box-shadow: 0px 0px 36px rgba(156, 171, 185, 0.3);
   border-radius: 100rem;
   background: #ffffff; }
-  .content .intro-item:nth-child(2) {
+  .content .intro-item-blue {
     background-color: #5287ed; }
-    .content .intro-item:nth-child(2) .border-custom {
-      border: 1px solid #ffffff; }
+    .content .intro-item-blue .border-custom {
+      border: 1px solid #ffffff !important; }
   .content .intro-item .border-custom {
     width: 260px;
     height: 260px;
-    border: 1px solid rgba(156, 171, 185, 0.3);
     box-sizing: border-box;
-    border-radius: 100rem; }
+    border-radius: 100rem;
+    border: 1px solid rgba(156, 171, 185, 0.3); }
 
 .content .intro .line-background {
   top: 38%;
@@ -2485,16 +2535,31 @@ blockquote {
     top: -25%;
     left: 50%;
     width: 228px; }
+    @media (max-width: 991px) {
+      .content .processOrders-bottom .position-arrow-down {
+        transform: rotate(90deg);
+        bottom: -25%;
+        left: 56%;
+        top: unset; } }
   .content .processOrders-bottom .position-arrow-up {
     bottom: -25%;
     left: 50%;
     width: 228px; }
+    @media (max-width: 991px) {
+      .content .processOrders-bottom .position-arrow-up {
+        transform: rotate(90deg);
+        right: 57%;
+        left: unset; } }
   .content .processOrders-bottom-item {
     background: #fff;
     border-radius: 20px;
-    width: 198px;
+    min-width: 168px;
     height: 236px;
     overflow: hidden; }
+    @media (max-width: 768px) {
+      .content .processOrders-bottom-item {
+        width: 210px;
+        margin: auto; } }
     .content .processOrders-bottom-item-number {
       width: 80px;
       height: 80px;
@@ -2574,12 +2639,14 @@ blockquote {
   padding: 96px 0 48px; }
   .content .feedbacks-top-item {
     padding: 66px 36px 18px;
-    width: 255px;
+    max-width: 255px;
     background: #fff;
-    border-radius: 16px; }
+    border-radius: 16px;
+    margin: auto;
+    min-height: 174px; }
     .content .feedbacks-top-item .number-blue-sky {
       top: -33%;
-      left: 33%;
+      left: 30%;
       width: 100px;
       height: 100px;
       border-radius: 100rem;
@@ -2588,7 +2655,7 @@ blockquote {
       color: #3cb6c8; }
     .content .feedbacks-top-item .number-pink {
       top: -33%;
-      left: 33%;
+      left: 30%;
       width: 100px;
       height: 100px;
       border-radius: 100rem;
@@ -2597,7 +2664,7 @@ blockquote {
       color: #f55c7d; }
     .content .feedbacks-top-item .number-purple {
       top: -33%;
-      left: 33%;
+      left: 30%;
       width: 100px;
       height: 100px;
       border-radius: 100rem;
@@ -2606,7 +2673,7 @@ blockquote {
       color: #7a77ee; }
     .content .feedbacks-top-item .number-orange {
       top: -33%;
-      left: 33%;
+      left: 30%;
       width: 100px;
       height: 100px;
       border-radius: 100rem;
@@ -2620,8 +2687,9 @@ blockquote {
 .content .news {
   background-color: #f4f6f8; }
   .content .news-content-item {
-    width: 350px;
-    border-radius: 4px; }
+    max-width: 350px;
+    border-radius: 4px;
+    box-shadow: 0px 4px 20px rgba(134, 152, 196, 0.37); }
     .content .news-content-item .line-blue {
       width: 20%;
       height: 5px;
@@ -2636,7 +2704,6 @@ blockquote {
   background-repeat: no-repeat;
   background-size: cover; }
   .content .faqs-item-title .title {
-    padding: 12px 25px;
     background-color: #5287ed;
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px; }
@@ -2649,7 +2716,6 @@ blockquote {
       background: transparent; }
   .content .faqs-item-content {
     background: #e3e6f3;
-    padding: 12px 25px;
     border-radius: 4px; }
 
 .content .partners {
@@ -2661,6 +2727,12 @@ blockquote {
     padding: 23px;
     border-radius: 16px;
     box-shadow: 0px 4px 20px rgba(134, 152, 196, 0.37); }
+    @media (max-width: 991px) {
+      .content .partners-content-item {
+        height: 90px; } }
+    @media (min-width: 992px) {
+      .content .partners-content-item {
+        height: 110px; } }
 
 .content .register {
   background: #f4f6f8;
