--- a/assets/scss/_default.scss
+++ b/assets/scss/_default.scss
@@ -90,6 +90,10 @@
     margin-top: 46px;
 }
 
+.mt-140 {
+    margin-top: 140px;
+}
+
 .mb-23 {
     margin-bottom: 23px;
 }
@@ -199,6 +203,9 @@
     .p35-desktop {
         padding: 35px !important;
     }
+    .pb-170-desktop {
+        padding-bottom: 170 !important;
+    }
     .w-50-desktop {
         width: 50% !important;
     }
@@ -216,6 +223,18 @@
     }
     .pt-30-desktop {
         padding-top: 30px !important;
+    }
+    .pt-64-desktop {
+        padding-top: 64px !important;
+    }
+    .py {
+        &-64-desktop {
+            padding-top: 64px !important;
+            padding-bottom: 64px !important;
+        }
+    }
+    .font-32-desktop {
+        font-size: 32px !important;
     }
     .font-30-desktop {
         font-size: 30px !important;
@@ -247,6 +266,9 @@
     .font-40-desktop {
         font-size: 40px !important;
     }
+    .font-48-desktop {
+        font-size: 48px !important;
+    }
     .font-56-desktop {
         font-size: 56px !important;
     }
@@ -262,7 +284,31 @@
     .mt-30-desktop {
         margin-top: 30px !important;
     }
+    .mt-60-desktop {
+        margin-top: 60px !important;
+    }
+    .mt-34-desktop {
+        margin-top: 34px !important;
+    }
+    .mt-316-desktop {
+        margin-top: 316px !important;
+    }
     .mb-20-desktop {
         margin-bottom: 20px !important;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .font-lg-16 {
+        font-size: 16px !important;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .font-mobile-12 {
+        font-size: 12px !important;
+    }
+    .font-mobile-10 {
+        font-size: 10px !important;
     }
 }
