--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -614,6 +614,9 @@ p {
 .mt-negative3 {
   margin-top: -3px; }
 
+.mt-6r {
+  margin-top: 6rem; }
+
 .me-30 {
   margin-right: 30px; }
 
@@ -2772,3 +2775,71 @@ blockquote {
       background: #ff9635;
       border-radius: 50px;
       padding: 16px 42px; }
+
+.content-login {
+  background-image: url(../images/login/bg-login.png);
+  background-repeat: no-repeat;
+  background-size: cover; }
+  .content-login-content .form-content-login {
+    overflow: hidden;
+    background-color: #2c5bb8; }
+    @media (min-width: 768px) {
+      .content-login-content .form-content-login {
+        border-radius: 24px; } }
+    .content-login-content .form-content-login-left {
+      background: #fff;
+      border-bottom-right-radius: 200px; }
+      .content-login-content .form-content-login-left .line-dashed {
+        border: 0.5px dashed rgba(255, 255, 255, 0.33); }
+    .content-login-content .form-content-login-right input.email, .content-login-content .form-content-login-right input.password {
+      padding: 15px;
+      width: 100%;
+      border-radius: 8px;
+      border: 1px solid #ffffff; }
+      .content-login-content .form-content-login-right input.email::placeholder, .content-login-content .form-content-login-right input.password::placeholder {
+        color: #839cb0; }
+    .content-login-content .form-content-login-right .show-password {
+      border: 0;
+      background: transparent;
+      top: 15px;
+      right: 10px; }
+    .content-login-content .form-content-login-right .btn-login {
+      background: #fff;
+      border-radius: 50px;
+      padding: 16px 42px;
+      color: #5287ed;
+      width: 100%; }
+    .content-login-content .form-content-login-right .line-text-login::before {
+      content: "";
+      height: 1px;
+      background: #fff;
+      position: absolute;
+      top: 50%;
+      left: 0;
+      width: 20%; }
+    .content-login-content .form-content-login-right .line-text-login::after {
+      content: "";
+      width: 20%;
+      height: 1px;
+      background: #fff;
+      position: absolute;
+      top: 50%;
+      right: 0; }
+    .content-login-content .form-content-login-right .login-with .btn-facebook, .content-login-content .form-content-login-right .login-with .btn-google {
+      padding: 15px 30px;
+      border-radius: 30px;
+      min-width: 250px; }
+      @media (min-width: 992px) {
+        .content-login-content .form-content-login-right .login-with .btn-facebook, .content-login-content .form-content-login-right .login-with .btn-google {
+          min-width: 160px; } }
+      @media (min-width: 1200px) {
+        .content-login-content .form-content-login-right .login-with .btn-facebook, .content-login-content .form-content-login-right .login-with .btn-google {
+          min-width: 200px; } }
+    .content-login-content .form-content-login-right .login-with .btn-facebook {
+      background-color: #518CFF;
+      border: 0; }
+    .content-login-content .form-content-login-right .login-with .btn-google {
+      background-color: #FF816B;
+      border: 0; }
+    .content-login-content .form-content-login-right .text-register {
+      color: #FFCFA1; }
