--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -260,7 +260,7 @@
                 color: #2c405a;
                 font-size: 16px;
                 &:hover {
-                    color: $white;
+                    color: #381ca0;
                 }
             }
             &:not(:last-child) {
