--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -593,6 +593,9 @@ p {
   &-50 {
     padding-left: 50px;
   }
+  &-45 {
+    padding-left: 45px;
+  }
   &-lg {
     &-50 {
       @include breakpoint(min-lg-device) {
