update ui for question

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -38,3 +38,5 @@ https://fonts.gstatic.com">
 @import "appmobile";
 @import "login";
 @import "register";
+@import "question";
+@import "introduce";
