--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2975,3 +2975,33 @@ blockquote {
       height: 50px;
       border-radius: 50px;
       background-color: #FF816B; }
+
+.question-title {
+  background: url(../images/home/bg-faqs.png);
+  background-repeat: no-repeat;
+  background-size: cover; }
+
+.question-item-title .title {
+  background-color: #5287ed;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px; }
+
+.question-item-title .button {
+  background-color: #2c5bb8;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px; }
+  .question-item-title .button button {
+    border: 0;
+    background: transparent; }
+
+.question-item-content {
+  background: #e3e6f3;
+  border-radius: 4px; }
+
+.introduce-header {
+  background: url(../images/introduce/bg-header.png);
+  background-repeat: no-repeat;
+  background-size: cover; }
+
+.introduce-content {
+  background-color: #F6F7FB; }
